lang/tests/compile_fail/dup_close_unsound.stderr
error: `dup` cannot be used with `close` — mutation on aliased accounts is unsound
  --> tests/compile_fail/dup_close_unsound.rs:14:5
   |
14 | /     /// CHECK: testing dup + close
15 | |     #[account(mut, dup, close(dest = payer, authority = payer))]
16 | |     pub vault: Account<Token>,
   | |_____________________________^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/dup_close_unsound.rs:3:5
  |
3 | use quasar_spl::*;
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
